GetClientWithAppointments
